# bench-model-archive

./: .gitignore  README.md  README.txt
BENCH_ActMob/: .gitignore  BENCH-Mobility_IAMC_version.ipynb  README.txt  pyproject.toml  run_BENCH_Mobility.py  settings.ini  test_figures.py
BENCH_ActMob/.virtual_documents/: BENCH-Mobility_v2.ipynb
BENCH_ActMob/input/: Active Mobility in Cities (Responses) - Form responses 1.csv  Active Mobility in Cities (Responses).xlsx  agent_ranges.csv  agent_setup.csv  emissions_inputs.csv  kn_aw__coefficients.csv  population.csv  street_mapping_with_index.xlsx  streets_with_index.xlsx  survey_encoded.csv  survey_encoded_reviewed.xlsx  survey_simulation.csv  vienna_district_densities.csv  vienna_district_infra__baseline.csv  vienna_district_infra__innerestadt2050.csv  vienna_district_infra__innerestadt2060.csv  vienna_district_infra__innerestadtearly2050.csv  vienna_district_infra__innerestadtearly2060.csv  vienna_zoning.csv  vienna_zoning_low_ambition.csv
BENCH_ActMob/source_code/: Figures.ipynb  action.py  figures.py  household_agent.py  infrastructure_map.py  learning.py  model_class.py  policy.py  summary.py  (+1 more)
BENCH_BSS/: README.md  adoption_rate_combined.csv  district_adoption_combined.csv  districts.geojson  emissions_savings_combined.csv  infra_expansion.py  main.py  main_mvp.py  plot_comparison.py  pyproject.toml  ranked_new_bike_stations.geojson  stage_combined.csv  station_locations.geojson  user_status_combined.csv  vienna_boundary.json
BENCH_py/: .gitignore  README.md  main.py  model_logic.pptx  pyproject.toml  settings.ini
(+75 files in other folders)
