[project]
name = "bench-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.1.0",
    "ipykernel>=7.2.0",
    "mesa>=3.0.0",
    "networkx>=3.6.1",
    "notebook>=7.5.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyprojroot>=0.3.0",
    "solara>=1.57.4",
]
